--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -348,10 +348,10 @@
        SECTION 2: VIEW ALL TICKETS (PUBLIC, WITH INLINE APPEAL FORM)
        ============================================================== -->
   <div id="viewSection" class="container hidden">
-    <div class="form-group">
-      <input type="checkbox" id="showHistoricFinalisedPublic" />
-      <label for="showHistoricFinalisedPublic">Show historic finalised tickets (older than 3 days)</label>
-    </div>
+  <div class="form-group">
+    <input type="checkbox" id="showHistoricFinalisedPublic" />
+    <label for="showHistoricFinalisedPublic">Show historic finalised tickets (older than 3 days)</label>
+  </div>
     <h2 class="section-title">All Submitted Tickets</h2>
     <div id="ticketsListContainer">
       <!-- Public table + inline appeal form will be injected here -->
@@ -380,12 +380,31 @@
   <!-- ==============================================================
        SECTION 4: ADMIN DASHBOARD (PRIVATE, WITH DETAIL VIEW)
        ============================================================== -->
-  <div id="adminSection" class="container hidden">
-    <div class="form-group">
-      <input type="checkbox" id="showHistoricFinalisedAdmin" />
-      <label for="showHistoricFinalisedAdmin">Show historic finalised tickets (older than 3 days)</label>
-    </div>
-    <button id="headStewardAudit" class="btn">Head Steward Audit</button>
+  <div id="adminSection"
+  <!-- Admin Filters & Head Steward Audit -->
+  <div class="form-group">
+    <label for="adminCompetitionFilter">Filter by Competition</label>
+    <select id="adminCompetitionFilter">
+      <option value="">All Competitions</option>
+      <option value="ACC - BEGINNER CONSOLE">ACC - BEGINNER CONSOLE</option>
+      <option value="ACC - BEGINNER PC">ACC - BEGINNER PC</option>
+      <option value="ACC - PRO AM CONSOLE">ACC - PRO AM CONSOLE</option>
+      <option value="ACC - PRO AM PC">ACC - PRO AM PC</option>
+      <option value="ACC - ENDURO SOLO">ACC - ENDURO SOLO</option>
+      <option value="ACC - ENDURO TEAMS">ACC - ENDURO TEAMS</option>
+      <option value="ACC - GMC">ACC - GMC</option>
+      <option value="ACC - AMATEUR PC">ACC - AMATEUR PC</option>
+      <option value="ACC - AMATEUR CONSOLE">ACC - AMATEUR CONSOLE</option>
+      <option value="AC – all game modes">AC – all game modes</option>
+      <option value="AC EVO – all game modes">AC EVO – all game modes</option>
+      <option value="F1 2025">F1 2025</option>
+    </select>
+  </div>
+  <div class="form-group">
+    <input type="checkbox" id="adminShowFinalised" />
+    <label for="adminShowFinalised">Show finalised tickets older than 4 days</label>
+  </div>
+  <button id="headStewardAudit" class="btn">Head Steward Audit</button>
   <!-- End Admin Filters & Audit -->
  class="container hidden">
     <h2 class="section-title">Admin Dashboard</h2>
@@ -398,7 +417,8 @@
        Firebase v9+ Modular SDK & App Logic (including PDF generation)
        ============================================================== -->
   <script type="module" defer>
-    // 1) Import required Firebase modules
+document.addEventListener('DOMContentLoaded', () => {
+// 1) Import required Firebase modules
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
     import {
       getFirestore,
@@ -498,14 +518,12 @@
       const snapshot = await getDocs(collection(db, "drivers"));
       const names = [];
       snapshot.forEach(docSnap => {
-        // Skip finalised older than 3 days
-          const data = docSnap.data();
-          const ts = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
-          if (data.status === 'Finalised' && ts) {
-            const ageMs = Date.now() - ts.getTime();
-            if (ageMs > 3*24*60*60*1000 && !showHistoric) return;
-          }
-const data = docSnap.data();
+        const data = docSnap.data();
+        const tsObj = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
+        if (data.status === 'Finalised' && tsObj) {
+          const ageMs = Date.now() - tsObj.getTime();
+          if (ageMs > 3*24*60*60*1000 && !showHistoric) return;
+        }
         if (data.fullName && typeof data.fullName === "string") {
           names.push(data.fullName);
         }
@@ -548,14 +566,12 @@ const data = docSnap.data();
       const snapshot = await getDocs(collection(db, "drivers"));
       const names = [];
       snapshot.forEach(docSnap => {
-        // Skip finalised older than 3 days
-          const data = docSnap.data();
-          const ts = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
-          if (data.status === 'Finalised' && ts) {
-            const ageMs = Date.now() - ts.getTime();
-            if (ageMs > 3*24*60*60*1000 && !showHistoric) return;
-          }
-const data = docSnap.data();
+        const data = docSnap.data();
+        const tsObj = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
+        if (data.status === 'Finalised' && tsObj) {
+          const ageMs = Date.now() - tsObj.getTime();
+          if (ageMs > 3*24*60*60*1000 && !showHistoric) return;
+        }
         if (data.fullName && typeof data.fullName === "string") {
           names.push(data.fullName);
         }
@@ -598,14 +614,12 @@ const data = docSnap.data();
       const snapshot = await getDocs(collection(db, "tracks"));
       const names = [];
       snapshot.forEach(docSnap => {
-        // Skip finalised older than 3 days
-          const data = docSnap.data();
-          const ts = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
-          if (data.status === 'Finalised' && ts) {
-            const ageMs = Date.now() - ts.getTime();
-            if (ageMs > 3*24*60*60*1000 && !showHistoric) return;
-          }
-const data = docSnap.data();
+        const data = docSnap.data();
+        const tsObj = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
+        if (data.status === 'Finalised' && tsObj) {
+          const ageMs = Date.now() - tsObj.getTime();
+          if (ageMs > 3*24*60*60*1000 && !showHistoric) return;
+        }
         if (data.name && typeof data.name === "string") {
           names.push(data.name);
         }
@@ -648,14 +662,12 @@ const data = docSnap.data();
       const snapshot = await getDocs(collection(db, "regulations"));
       const names = [];
       snapshot.forEach(docSnap => {
-        // Skip finalised older than 3 days
-          const data = docSnap.data();
-          const ts = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
-          if (data.status === 'Finalised' && ts) {
-            const ageMs = Date.now() - ts.getTime();
-            if (ageMs > 3*24*60*60*1000 && !showHistoric) return;
-          }
-const data = docSnap.data();
+        const data = docSnap.data();
+        const tsObj = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
+        if (data.status === 'Finalised' && tsObj) {
+          const ageMs = Date.now() - tsObj.getTime();
+          if (ageMs > 3*24*60*60*1000 && !showHistoric) return;
+        }
         if (data.name && typeof data.name === "string") {
           names.push(data.name);
         }
@@ -1068,12 +1080,7 @@ if (!decisionText) {
     // Highlight “Finalised” rows in green
     // ----------------------------------------------------------------
     async function fetchAndRenderTickets(targetContainer, isAdmin = false) {
-      
-      // Hide finalised tickets older than 3 days unless toggled
-      const showHistoric = isAdmin
-        ? document.getElementById('showHistoricFinalisedAdmin').checked
-        : document.getElementById('showHistoricFinalisedPublic').checked;
-const ticketsCol   = collection(db, "tickets");
+      const ticketsCol   = collection(db, "tickets");
       const ticketsQuery = query(ticketsCol, orderBy("timestamp","desc"));
 
       try {
@@ -1102,16 +1109,17 @@ const ticketsCol   = collection(db, "tickets");
         `;
 
         snapshot.forEach(docSnap => {
-          // Skip finalised older than 3 days
-          const data = docSnap.data();
-          const ts = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
-          if (data.status === 'Finalised' && ts) {
-            const ageMs = Date.now() - ts.getTime();
-            if (ageMs > 3*24*60*60*1000 && !showHistoric) return;
-          }
-const data    = docSnap.data();
+          const data    = docSnap.data();
           const tsObj   = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
           // Admin filters
+          if (isAdmin) {
+            const compFilter = compFilterEl.value;
+            const showOld    = showFinalisedEl.checked;
+            if (compFilter && data.competition !== compFilter) return;
+            if (!showOld && data.status === "Finalised" && tsObj) {
+              if (Date.now() - tsObj.getTime() > 4*24*60*60*1000) return;
+            }
+          }
 
           const tsStr   = tsObj ? tsObj.toLocaleString() : "";
           const id      = docSnap.id;
@@ -1523,6 +1531,7 @@ const data    = docSnap.data();
       // 18) Save PDF
       doc.save(`IFWL_StewardDecision_${ticketId}.pdf`);
     }
-  </script>
+});
+</script>
 </body>
 </html>
