--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -382,29 +382,7 @@
        ============================================================== -->
   <div id="adminSection"
   <!-- Admin Filters & Head Steward Audit -->
-  <div class="form-group">
-    <label for="adminCompetitionFilter">Filter by Competition</label>
-    <select id="adminCompetitionFilter">
-      <option value="">All Competitions</option>
-      <option value="ACC - BEGINNER CONSOLE">ACC - BEGINNER CONSOLE</option>
-      <option value="ACC - BEGINNER PC">ACC - BEGINNER PC</option>
-      <option value="ACC - PRO AM CONSOLE">ACC - PRO AM CONSOLE</option>
-      <option value="ACC - PRO AM PC">ACC - PRO AM PC</option>
-      <option value="ACC - ENDURO SOLO">ACC - ENDURO SOLO</option>
-      <option value="ACC - ENDURO TEAMS">ACC - ENDURO TEAMS</option>
-      <option value="ACC - GMC">ACC - GMC</option>
-      <option value="ACC - AMATEUR PC">ACC - AMATEUR PC</option>
-      <option value="ACC - AMATEUR CONSOLE">ACC - AMATEUR CONSOLE</option>
-      <option value="AC – all game modes">AC – all game modes</option>
-      <option value="AC EVO – all game modes">AC EVO – all game modes</option>
-      <option value="F1 2025">F1 2025</option>
-    </select>
-  </div>
-  <div class="form-group">
-    <input type="checkbox" id="adminShowFinalised" />
-    <label for="adminShowFinalised">Show finalised tickets older than 4 days</label>
-  </div>
-  <button id="headStewardAudit" class="btn">Head Steward Audit</button>
+  
   <!-- End Admin Filters & Audit -->
  class="container hidden">
     <h2 class="section-title">Admin Dashboard</h2>
@@ -416,6 +394,9 @@
   <!-- ==============================================================
        Firebase v9+ Modular SDK & App Logic (including PDF generation)
        ============================================================== -->
+  </div>
+
+  <!-- End Admin Dashboard -->
   <script type="module" defer>
 document.addEventListener('DOMContentLoaded', () => {
 // 1) Import required Firebase modules
