--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -387,6 +387,7 @@
     <h2 class="section-title">Admin Dashboard</h2>
     <div id="adminTicketsContainer">
       <!-- Admin table will be injected here -->
+    </div>
   </div>
 
   <!-- ==============================================================
