--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -342,8 +342,6 @@
 
     <button id="viewTicketsBtn" class="link-btn">View All Tickets</button>
     <button id="loginToggleBtn" class="link-btn">Admin Login</button>
-  </div>
-
   <!-- ==============================================================
        SECTION 2: VIEW ALL TICKETS (PUBLIC, WITH INLINE APPEAL FORM)
        ============================================================== -->
@@ -380,7 +378,7 @@
   <!-- ==============================================================
        SECTION 4: ADMIN DASHBOARD (PRIVATE, WITH DETAIL VIEW)
        ============================================================== -->
-  <div id="adminSection"
+  <div id="adminSection" class="container hidden">
   <!-- Admin Filters & Head Steward Audit -->
   
   <!-- End Admin Filters & Audit -->
