--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -222,8 +222,7 @@
     }
   </style>
   <!-- jsPDF UMD build for PDF generation -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js" defer></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
   <header>
@@ -348,10 +347,6 @@
        SECTION 2: VIEW ALL TICKETS (PUBLIC, WITH INLINE APPEAL FORM)
        ============================================================== -->
   <div id="viewSection" class="container hidden">
-  <div class="form-group">
-    <input type="checkbox" id="showHistoricFinalisedPublic" />
-    <label for="showHistoricFinalisedPublic">Show historic finalised tickets (older than 3 days)</label>
-  </div>
     <h2 class="section-title">All Submitted Tickets</h2>
     <div id="ticketsListContainer">
       <!-- Public table + inline appeal form will be injected here -->
@@ -380,33 +375,7 @@
   <!-- ==============================================================
        SECTION 4: ADMIN DASHBOARD (PRIVATE, WITH DETAIL VIEW)
        ============================================================== -->
-  <div id="adminSection"
-  <!-- Admin Filters & Head Steward Audit -->
-  <div class="form-group">
-    <label for="adminCompetitionFilter">Filter by Competition</label>
-    <select id="adminCompetitionFilter">
-      <option value="">All Competitions</option>
-      <option value="ACC - BEGINNER CONSOLE">ACC - BEGINNER CONSOLE</option>
-      <option value="ACC - BEGINNER PC">ACC - BEGINNER PC</option>
-      <option value="ACC - PRO AM CONSOLE">ACC - PRO AM CONSOLE</option>
-      <option value="ACC - PRO AM PC">ACC - PRO AM PC</option>
-      <option value="ACC - ENDURO SOLO">ACC - ENDURO SOLO</option>
-      <option value="ACC - ENDURO TEAMS">ACC - ENDURO TEAMS</option>
-      <option value="ACC - GMC">ACC - GMC</option>
-      <option value="ACC - AMATEUR PC">ACC - AMATEUR PC</option>
-      <option value="ACC - AMATEUR CONSOLE">ACC - AMATEUR CONSOLE</option>
-      <option value="AC – all game modes">AC – all game modes</option>
-      <option value="AC EVO – all game modes">AC EVO – all game modes</option>
-      <option value="F1 2025">F1 2025</option>
-    </select>
-  </div>
-  <div class="form-group">
-    <input type="checkbox" id="adminShowFinalised" />
-    <label for="adminShowFinalised">Show finalised tickets older than 4 days</label>
-  </div>
-  <button id="headStewardAudit" class="btn">Head Steward Audit</button>
-  <!-- End Admin Filters & Audit -->
- class="container hidden">
+  <div id="adminSection" class="container hidden">
     <h2 class="section-title">Admin Dashboard</h2>
     <div id="adminTicketsContainer">
       <!-- Admin table will be injected here -->
@@ -416,9 +385,8 @@
   <!-- ==============================================================
        Firebase v9+ Modular SDK & App Logic (including PDF generation)
        ============================================================== -->
-  <script type="module" defer>
-document.addEventListener('DOMContentLoaded', () => {
-// 1) Import required Firebase modules
+  <script type="module">
+    // 1) Import required Firebase modules
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
     import {
       getFirestore,
@@ -426,7 +394,7 @@ document.addEventListener('DOMContentLoaded', () => {
       addDoc,
       getDocs,
       getDoc,
-      query, orderBy,
+      query,
       serverTimestamp,
       updateDoc,
       doc
@@ -519,11 +487,6 @@ document.addEventListener('DOMContentLoaded', () => {
       const names = [];
       snapshot.forEach(docSnap => {
         const data = docSnap.data();
-        const tsObj = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
-        if (data.status === 'Finalised' && tsObj) {
-          const ageMs = Date.now() - tsObj.getTime();
-          if (ageMs > 3*24*60*60*1000 && !showHistoric) return;
-        }
         if (data.fullName && typeof data.fullName === "string") {
           names.push(data.fullName);
         }
@@ -567,11 +530,6 @@ document.addEventListener('DOMContentLoaded', () => {
       const names = [];
       snapshot.forEach(docSnap => {
         const data = docSnap.data();
-        const tsObj = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
-        if (data.status === 'Finalised' && tsObj) {
-          const ageMs = Date.now() - tsObj.getTime();
-          if (ageMs > 3*24*60*60*1000 && !showHistoric) return;
-        }
         if (data.fullName && typeof data.fullName === "string") {
           names.push(data.fullName);
         }
@@ -615,11 +573,6 @@ document.addEventListener('DOMContentLoaded', () => {
       const names = [];
       snapshot.forEach(docSnap => {
         const data = docSnap.data();
-        const tsObj = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
-        if (data.status === 'Finalised' && tsObj) {
-          const ageMs = Date.now() - tsObj.getTime();
-          if (ageMs > 3*24*60*60*1000 && !showHistoric) return;
-        }
         if (data.name && typeof data.name === "string") {
           names.push(data.name);
         }
@@ -663,11 +616,6 @@ document.addEventListener('DOMContentLoaded', () => {
       const names = [];
       snapshot.forEach(docSnap => {
         const data = docSnap.data();
-        const tsObj = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
-        if (data.status === 'Finalised' && tsObj) {
-          const ageMs = Date.now() - tsObj.getTime();
-          if (ageMs > 3*24*60*60*1000 && !showHistoric) return;
-        }
         if (data.name && typeof data.name === "string") {
           names.push(data.name);
         }
@@ -1047,7 +995,6 @@ if (!decisionText) {
           const ticketRef = doc(db, "tickets", ticketId);
           await updateDoc(ticketRef, {
             status: newStatus,
-            finalisedAt: serverTimestamp(),
             stewardDecision: decisionText,
             stewardTag: stewardTagVal,
             futureAdvice: futureAdviceVal
@@ -1081,7 +1028,7 @@ if (!decisionText) {
     // ----------------------------------------------------------------
     async function fetchAndRenderTickets(targetContainer, isAdmin = false) {
       const ticketsCol   = collection(db, "tickets");
-      const ticketsQuery = query(ticketsCol, orderBy("timestamp","desc"));
+      const ticketsQuery = query(ticketsCol);
 
       try {
         const snapshot = await getDocs(ticketsQuery);
@@ -1111,16 +1058,6 @@ if (!decisionText) {
         snapshot.forEach(docSnap => {
           const data    = docSnap.data();
           const tsObj   = data.timestamp && data.timestamp.toDate ? data.timestamp.toDate() : null;
-          // Admin filters
-          if (isAdmin) {
-            const compFilter = compFilterEl.value;
-            const showOld    = showFinalisedEl.checked;
-            if (compFilter && data.competition !== compFilter) return;
-            if (!showOld && data.status === "Finalised" && tsObj) {
-              if (Date.now() - tsObj.getTime() > 4*24*60*60*1000) return;
-            }
-          }
-
           const tsStr   = tsObj ? tsObj.toLocaleString() : "";
           const id      = docSnap.id;
           const steward = data.stewardTag || "";
@@ -1531,7 +1468,6 @@ if (!decisionText) {
       // 18) Save PDF
       doc.save(`IFWL_StewardDecision_${ticketId}.pdf`);
     }
-});
-</script>
+  </script>
 </body>
 </html>
