--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width,initial-scale=1.0" name="viewport"/>
-  <meta http-equiv="refresh" content="55">
+<meta http-equiv="refresh" content="55">
 <title>IFWL F1 Leaderboard</title>
 <style>
     body {
@@ -23,8 +23,7 @@
       display:flex; align-items:center; justify-content:center;
       gap:20px; margin-bottom:10px;
     }
-    .header img {height:48px;; background:#fff;
-}
+    .header img {height:48px; background:#fff;}
     .join-series { text-align:center; margin:12px 0; }
     .join-series a {
       background:#1B1443; color:#fff; text-decoration:none;
@@ -54,19 +53,19 @@
     }
 
     /* driver number — no box, big bold italic black */
-.driver-number {
-  display: inline-block;
-  font-size: 4em;           /* bump up as large as you like */
-  font-weight: bold;
-  font-style: italic;
-  line-height: 1;
-  color: #000;                /* pure black text */
-  background: none;           /* remove the grey box */
-  padding: 0;                 /* no extra space */
-  margin-right: 8px;          /* keep a little gap to the car */
-  vertical-align: middle;
-  border-radius: 0;           /* no rounding */
-}
+    .driver-number {
+      display: inline-block;
+      font-size: 4em;
+      font-weight: bold;
+      font-style: italic;
+      line-height: 1;
+      color: #000;
+      background: none;
+      padding: 0;
+      margin-right: 8px;
+      vertical-align: middle;
+      border-radius: 0;
+    }
 
     /* Team Colours */
     .team-ALPINE         { background-color:#0090FF; }
@@ -80,111 +79,110 @@
     .team-HAAS          { background-color:#B6BABD; }
     .team-WILLIAMS      { background-color:#005AFF; }
     .team-RESERVE       { background-color:#FFFFFF; color:#000; }
-  
-.arrow-icon {
-  height: 64px;
-  width: 64px;
-  margin-left: 6px;
-  vertical-align: middle;
-}
-
-@media (max-width: 768px) {
-  .header {
-    flex-direction: column;
-    gap: 10px;
-  }
-
-  .header img {height: 32px;; background:#fff;
-}
-
-  h1 {
-    font-size: 1.5em;
-  }
-
-  .join-series a {
-    display: inline-block;
-    font-size: 0.9em;
-    padding: 8px 16px;
-  }
-
-  table {
-    display: block;
-    width: 100%;
-    overflow-x: auto;
-    white-space: nowrap;
-    font-size: 0.9em;
-  }
-
-  th, td {
-    padding: 6px;
-  }
-
-  img.car {
-    height: 32px;
-    margin: 0 4px 0 0;
-  }
-
-  img.logo {
-    height: 24px;
-    margin-left: 6px;
-  }
 
   .arrow-icon {
-    height: 32px;
-    width: 32px;
-    margin-left: 4px;
+    height: 64px;
+    width: 64px;
+    margin-left: 6px;
+    vertical-align: middle;
   }
 
-  .driver-number {
-    font-size: 2em;
+  @media (max-width: 768px) {
+    .header {
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .header img {height: 32px; background:#fff;}
+
+    h1 {
+      font-size: 1.5em;
+    }
+
+    .join-series a {
+      display: inline-block;
+      font-size: 0.9em;
+      padding: 8px 16px;
+    }
+
+    table {
+      display: block;
+      width: 100%;
+      overflow-x: auto;
+      white-space: nowrap;
+      font-size: 0.9em;
+    }
+
+    th, td {
+      padding: 6px;
+    }
+
+    img.car {
+      height: 32px;
+      margin: 0 4px 0 0;
+    }
+
+    img.logo {
+      height: 24px;
+      margin-left: 6px;
+    }
+
+    .arrow-icon {
+      height: 32px;
+      width: 32px;
+      margin-left: 4px;
+    }
+
+    .driver-number {
+      font-size: 2em;
+    }
+
+    .version {
+      font-size: 0.7em;
+      padding: 1px 4px;
+    }
   }
 
-  .version {
-    font-size: 0.7em;
-    padding: 1px 4px;
+
+  .free-team {
+    background: rgba(255, 255, 255, 0.8);
+    color: #000;
+    padding: 10px;
+    margin: 6px 0;
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    flex-wrap: wrap;
   }
-}
+  .free-count {
+    font-weight: bold;
+    margin-left: auto;
+  }
 
 
-.free-team {
-  background: rgba(255, 255, 255, 0.8);
-  color: #000;
-  padding: 10px;
-  margin: 6px 0;
-  border-radius: 6px;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  flex-wrap: wrap;
-}
-.free-count {
-  font-weight: bold;
-  margin-left: auto;
-}
-
-
-.layout-two-column {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-}
-.layout-two-column .half {
-  width: 100%;
-}
-@media (min-width: 768px) {
+  .layout-two-column {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
   .layout-two-column .half {
-    width: 49%;
+    width: 100%;
   }
-}
+  @media (min-width: 768px) {
+    .layout-two-column .half {
+      width: 49%;
+    }
+  }
 
 
-.driver-of-day {
-  text-align: center;
-  margin: 20px 0;
-  font-size: 1.2em;
-  font-weight: bold;
-  color: #fff;
-}
+  .driver-of-day {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 1.2em;
+    font-weight: bold;
+    color: #fff;
+  }
 
 </style>
 </head>
@@ -272,11 +270,11 @@ const teamCars = {
 const teamLogos = {
   "ALPINE":"ALPINELOGO.webp",
   "ASTON MARTIN":"ASTONLOGO.webp",
-  "FERRARI":"FERARRILOGO.webp",
+  "FERRARI":"FERRARILOGO.webp",
   "HAAS":"HAASLOGO.webp",
   "MCLAREN":"MCLARENLOGO.webp",
   "MERCEDES":"MERCEDESLOGO.webp",
-  "RACING BULLS":"RBLOGO.webp",
+  "RACING BULLS":"RBRLOGO.webp",
   "RED BULL RACING":"RBRLOGO.webp",
   "KICK SAUBER":"KICKLOGO.webp",
   "RESERVE":"RESERVELOGO.webp",
@@ -288,6 +286,11 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
   .then(r => r.text())
   .then(t => JSON.parse(t.substr(47).slice(0,-2)))
   .then(j => {
+    // determine dynamic race column indices
+    const totalCols = j.table.cols.length;
+    const firstRaceIdx = 2;            // column C is R1
+    const totalPtsIdx = totalCols - 1; // last column is TOTAL POINTS
+
     const rows = j.table.rows.map(r => r.c.map(c => c?.v || ""));
     const dBody = document.querySelector("#driver-table tbody");
     const cBody = document.querySelector("#constructor-table tbody");
@@ -300,16 +303,19 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
     const currConstructorTotals = {};
     const driverTeamMap = {};
 
+    // sum all races (including sprints) dynamically
     function getPrevTotal(r) {
-      return r.slice(2, 17).reduce((acc, val) => acc + (parseInt(val) || 0), 0);
+      return r
+        .slice(firstRaceIdx, totalPtsIdx)
+        .reduce((acc, val) => acc + (parseInt(val) || 0), 0);
     }
 
     rows.forEach(r => {
       const raw = (r[0] || "") + "";
       const name = raw.replace(/\[\s*\d+\s*\]\s*-\s*/, "").trim();
       const team = (r[1] || "").trim();
-      const currPts = parseInt(r[18]) || 0;
       const prevPts = getPrevTotal(r);
+      const currPts = parseInt(r[totalPtsIdx]) || 0;
 
       if (!name) return;
 
@@ -333,6 +339,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
     const prevRanks = rankMap([...prevDriverTotals]);
     const currRanks = rankMap([...currDriverTotals]);
 
+    // Driver Standings
     currDriverTotals
       .sort((a, b) => b.pts - a.pts)
       .forEach(entry => {
@@ -341,12 +348,10 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
         const pts = entry.pts;
         const pos = currRanks[name];
         const teamUpper = (team || "").toUpperCase();
-        const diff = (prevRanks[name] || 0) - (currRanks[name] || 0);
+        const diff = (prevRanks[name] || 0) - (currRanks[name]||0);
         let arrow = "";
         if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
         else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
-
-        console.log("Driver:", name, "| Prev Rank:", prevRanks[name], "| Curr Rank:", currRanks[name], "| Diff:", diff);
 
         const tr = document.createElement("tr");
         tr.className = safeClass(teamUpper);
@@ -362,6 +367,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
         dBody.appendChild(tr);
       });
 
+    // Constructor Standings
     const prevCRank = rankMap(Object.entries(prevConstructorTotals).map(([name, pts]) => ({ name, pts })));
     const currCRank = rankMap(Object.entries(currConstructorTotals).map(([name, pts]) => ({ name, pts })));
 
@@ -369,13 +375,11 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
       .sort((a, b) => b[1] - a[1])
       .forEach(([team, pts]) => {
         const teamUpper = team.toUpperCase();
-        const diff = (prevCRank[team] || 0) - (currCRank[team] || 0);
+        const diff = (prevCRank[team]||0) - (currCRank[team]||0);
         let arrow = "";
         if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
         else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
 
-        console.log("Constructor:", team, "| Prev Rank:", prevCRank[team], "| Curr Rank:", currCRank[team], "| Diff:", diff);
-
         const tr = document.createElement("tr");
         tr.className = safeClass(teamUpper);
         tr.innerHTML = `
@@ -383,54 +387,4 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
             <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
             ${team}
             <img src="${teamLogos[teamUpper]}" class="logo" alt="${team}"/>
-          </td>
-          <td>${pts} ${arrow}</td>`;
-        cBody.appendChild(tr);
-      });
-  
-    // --- Team Slots Free Section ---
-    const teamSlotLimit = 2;
-    const teamSlotCounts = {};
-    const teamFreeCounts = {};
-
-    rows.forEach(r => {
-      const driver = (r[0] || "").trim();
-      const team = (r[1] || "").trim();
-      if (!team) return;
-      teamSlotCounts[team] = (teamSlotCounts[team] || 0) + (driver ? 1 : 0);
-      teamFreeCounts[team] = (teamFreeCounts[team] || 0) + (!driver ? 1 : 0);
-    });
-
-    const freeTbody = document.querySelector("#free-slots-table tbody");
-    Object.entries(teamFreeCounts).forEach(([team, freeCount]) => {
-      if (freeCount > 0) {
-        const teamUpper = team.toUpperCase();
-        const tr = document.createElement("tr");
-        tr.className = safeClass(teamUpper);
-        tr.innerHTML = `
-          <td>
-            <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
-            ${team}
-            <img src="${teamLogos[teamUpper]}" class="logo" alt="${team}"/>
-          </td>
-          <td>${freeCount} slot${freeCount > 1 ? 's' : ''} free</td>
-        `;
-        freeTbody.appendChild(tr);
-      }
-    });
-});
-
-  // --- Driver of the Day fetch ---
-  fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/export?format=csv&range=U16:U16`)
-    .then(r => r.text())
-    .then(text => {
-      const name = text.trim();
-      document.getElementById("driver-of-day-name").textContent = name || "N/A";
-    })
-    .catch(() => {
-      document.getElementById("driver-of-day-name").textContent = "Error";
-    });
-
-</script>
-</body>
-</html>
+          </>
