--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -187,7 +187,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.63 (Added Driver of the Day above Free Slots; Added Position column in Driver Standings)</div>
+<div class="version">Version: Beta 0.0.64 (sprint race coding added - form fully updated back end)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
