--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<meta content="width=device-width,initial-scale=1.0" name="viewport"/>
+<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 <meta http-equiv="refresh" content="55">
 <title>IFWL F1 Leaderboard</title>
 <style>
@@ -79,312 +78,244 @@
     .team-HAAS          { background-color:#B6BABD; }
     .team-WILLIAMS      { background-color:#005AFF; }
     .team-RESERVE       { background-color:#FFFFFF; color:#000; }
-
-  .arrow-icon {
-    height: 64px;
-    width: 64px;
-    margin-left: 6px;
-    vertical-align: middle;
-  }
-
-  @media (max-width: 768px) {
-    .header {
-      flex-direction: column;
-      gap: 10px;
-    }
-
-    .header img {height: 32px; background:#fff;}
-
-    h1 {
-      font-size: 1.5em;
-    }
-
-    .join-series a {
-      display: inline-block;
-      font-size: 0.9em;
-      padding: 8px 16px;
-    }
-
-    table {
-      display: block;
-      width: 100%;
-      overflow-x: auto;
-      white-space: nowrap;
-      font-size: 0.9em;
-    }
-
-    th, td {
-      padding: 6px;
-    }
-
-    img.car {
-      height: 32px;
-      margin: 0 4px 0 0;
-    }
-
-    img.logo {
-      height: 24px;
-      margin-left: 6px;
-    }
-
+  
     .arrow-icon {
-      height: 32px;
-      width: 32px;
-      margin-left: 4px;
+      height: 64px;
+      width: 64px;
+      margin-left: 6px;
+      vertical-align: middle;
     }
 
-    .driver-number {
-      font-size: 2em;
+    @media (max-width: 768px) {
+      .header {
+        flex-direction: column;
+        gap: 10px;
+      }
+
+      .header img {height: 32px; background:#fff;}
+
+      h1 {
+        font-size: 1.5em;
+      }
+
+      .join-series a {
+        display: inline-block;
+        font-size: 0.9em;
+        padding: 8px 16px;
+      }
+
+      table {
+        display: block;
+        width: 100%;
+        overflow-x: auto;
+        white-space: nowrap;
+        font-size: 0.9em;
+      }
+
+      th, td {
+        padding: 6px;
+      }
+
+      img.car {
+        height: 32px;
+        margin: 0 4px 0 0;
+      }
+
+      img.logo {
+        height: 24px;
+        margin-left: 6px;
+      }
+
+      .arrow-icon {
+        height: 32px;
+        width: 32px;
+        margin-left: 4px;
+      }
+
+      .driver-number {
+        font-size: 2em;
+      }
+
+      .version {
+        font-size: 0.7em;
+        padding: 1px 4px;
+      }
     }
 
-    .version {
-      font-size: 0.7em;
-      padding: 1px 4px;
+
+    .free-team {
+      background: rgba(255, 255, 255, 0.8);
+      color: #000;
+      padding: 10px;
+      margin: 6px 0;
+      border-radius: 6px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      flex-wrap: wrap;
     }
-  }
+    .free-count {
+      font-weight: bold;
+      margin-left: auto;
+    }
 
 
-  .free-team {
-    background: rgba(255, 255, 255, 0.8);
-    color: #000;
-    padding: 10px;
-    margin: 6px 0;
-    border-radius: 6px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    flex-wrap: wrap;
-  }
-  .free-count {
-    font-weight: bold;
-    margin-left: auto;
-  }
-
-
-  .layout-two-column {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-  }
-  .layout-two-column .half {
-    width: 100%;
-  }
-  @media (min-width: 768px) {
+    .layout-two-column {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
     .layout-two-column .half {
-      width: 49%;
+      width: 100%;
     }
-  }
+    @media (min-width: 768px) {
+      .layout-two-column .half {
+        width: 49%;
+      }
+    }
 
 
-  .driver-of-day {
-    text-align: center;
-    margin: 20px 0;
-    font-size: 1.2em;
-    font-weight: bold;
-    color: #fff;
-  }
+    .driver-of-day {
+      text-align: center;
+      margin: 20px 0;
+      font-size: 1.2em;
+      font-weight: bold;
+      color: #fff;
+    }
 
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.64 (sprint race coding added - form fully updated back end)</div>
-<div class="header">
-<img alt="IFWL Logo" src="ifwl_logo.png"/>
-<h1>IFWL F1 Leaderboard</h1>
-<img alt="IFWL Logo" src="ifwl_logo.png"/>
-</div>
-<div class="join-series">
-<a href="https://www.thesimgrid.com/championships/15239" target="_blank">
-      Join our latest series here
-    </a>
-</div>
-<div class="layout-two-column">
-<div class="half">
-
-</div>
-<div class="half">
-
-
-
-
-</div>
-</div>
-
-<h2>Driver of the Day</h2>
-<div id="driver-of-day" class="driver-of-day">
-  <span id="driver-of-day-name">Loading...</span>
-</div>
-
-<h2>Team Slots Free</h2>
-<table id="free-slots-table">
-  <thead><tr><th>TEAM</th><th>SLOTS FREE</th></tr></thead>
-  <tbody></tbody>
-</table>
-
-<div class="layout-two-column">
-  <div class="half">
-    <h2>Driver Standings</h2>
-<table id="driver-table">
-<thead>
-<tr>
-            <th>POS</th>
-            <th>DRIVER</th>
-            <th>TEAM</th>
-            <th>TOTAL POINTS</th>
-          </tr>
-</thead>
-<tbody></tbody>
-</table>
+  <div class="version">Version: Beta 0.0.64 (Sprint race coding added; form fully updated back end)</div>
+  <div class="header">
+    <img alt="IFWL Logo" src="ifwl_logo.png"/>
+    <h1>IFWL F1 Leaderboard</h1>
+    <img alt="IFWL Logo" src="ifwl_logo.png"/>
   </div>
-  <div class="half">
-    <h2>Constructors Standings</h2>
-<table id="constructor-table">
-<thead>
-<tr><th>TEAM</th><th>TOTAL POINTS</th></tr>
-</thead>
-<tbody></tbody>
-</table>
+  <div class="join-series">
+    <a href="https://www.thesimgrid.com/championships/15239" target="_blank">Join our latest series here</a>
   </div>
-</div>
 
-<h2>Unassigned Drivers</h2>
-<table id="unassigned-table">
-<thead><tr><th>DRIVER</th></tr></thead>
-<tbody></tbody>
-</table>
+  <h2>Driver of the Day</h2>
+  <div id="driver-of-day" class="driver-of-day">Loading...</div>
+
+  <h2>Team Slots Free</h2>
+  <table id="free-slots-table">
+    <thead>
+      <tr><th>TEAM</th><th>SLOTS FREE</th></tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
+  <div class="layout-two-column">
+    <div class="half">
+      <h2>Driver Standings</h2>
+      <table id="driver-table">
+        <thead>
+          <tr><th>POS</th><th>DRIVER</th><th>TEAM</th><th>TOTAL POINTS</th></tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
+    <div class="half">
+      <h2>Constructors Standings</h2>
+      <table id="constructor-table">
+        <thead>
+          <tr><th>TEAM</th><th>TOTAL POINTS</th></tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
+  </div>
+
+  <h2>Unassigned Drivers</h2>
+  <table id="unassigned-table">
+    <thead>
+      <tr><th>DRIVER</th></tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
 <script>
-const sheetId = "1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog";
-const teamCars = {
-  "ALPINE":"ALPINE.webp",
-  "ASTON MARTIN":"ASTON.webp",
-  "FERRARI":"FERRARI.webp",
-  "HAAS":"HAAS.webp",
-  "MCLAREN":"MCLAREN.webp",
-  "MERCEDES":"MERCEDES.webp",
-  "RACING BULLS":"RACINGBULLS.webp",
-  "RED BULL RACING":"RBR.webp",
-  "KICK SAUBER":"SAUBER.webp",
-  "RESERVE":"RESERVE.webp",
-  "WILLIAMS":"WILLIAMS.webp"
-};
-const teamLogos = {
-  "ALPINE":"ALPINELOGO.webp",
-  "ASTON MARTIN":"ASTONLOGO.webp",
-  "FERRARI":"FERRARILOGO.webp",
-  "HAAS":"HAASLOGO.webp",
-  "MCLAREN":"MCLARENLOGO.webp",
-  "MERCEDES":"MERCEDESLOGO.webp",
-  "RACING BULLS":"RBRLOGO.webp",
-  "RED BULL RACING":"RBRLOGO.webp",
-  "KICK SAUBER":"KICKLOGO.webp",
-  "RESERVE":"RESERVELOGO.webp",
-  "WILLIAMS":"WILLIAMSLOGO.webp"
-};
-const safeClass = t => "driver-row team-" + t.replace(/\s+/g,"-");
+  const sheetId = '1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog';
 
-fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts=${Date.now()}`)
-  .then(r => r.text())
-  .then(t => JSON.parse(t.substr(47).slice(0,-2)))
-  .then(j => {
-    // determine dynamic race column indices
-    const totalCols = j.table.cols.length;
-    const firstRaceIdx = 2;            // column C is R1
-    const totalPtsIdx = totalCols - 1; // last column is TOTAL POINTS
+  const teamCars = {
+    "ALPINE":"ALPINE.webp",
+    "ASTON MARTIN":"ASTON.webp",
+    "FERRARI":"FERRARI.webp",
+    "HAAS":"HAAS.webp",
+    "MCLAREN":"MCLAREN.webp",
+    "MERCEDES":"MERCEDES.webp",
+    "RACING BULLS":"RACINGBULLS.webp",
+    "RED BULL RACING":"RBR.webp",
+    "KICK SAUBER":"SAUBER.webp",
+    "RESERVE":"RESERVE.webp",
+    "WILLIAMS":"WILLIAMS.webp"
+  };
+  const teamLogos = {
+    "ALPINE":"ALPINELOGO.webp",
+    "ASTON MARTIN":"ASTONLOGO.webp",
+    "FERRARI":"FERRARILOGO.webp",
+    "HAAS":"HAASLOGO.webp",
+    "MCLAREN":"MCLARENLOGO.webp",
+    "MERCEDES":"MERCEDESLOGO.webp",
+    "RACING BULLS":"RBRLOGO.webp",
+    "RED BULL RACING":"RBRLOGO.webp",
+    "KICK SAUBER":"KICKLOGO.webp",
+    "RESERVE":"RESERVELOGO.webp",
+    "WILLIAMS":"WILLIAMSLOGO.webp"
+  };
+  const safeClass = t => 'driver-row team-' + t.replace(/\s+/g,'-');
 
-    const rows = j.table.rows.map(r => r.c.map(c => c?.v || ""));
-    const dBody = document.querySelector("#driver-table tbody");
-    const cBody = document.querySelector("#constructor-table tbody");
-    const uBody = document.querySelector("#unassigned-table tbody");
-    dBody.innerHTML = cBody.innerHTML = uBody.innerHTML = "";
+  fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts=${Date.now()}`)
+    .then(r => r.text())
+    .then(t => JSON.parse(t.substr(47).slice(0,-2)))
+    .then(j => {
+      const totalCols = j.table.cols.length;
+      const firstRaceIdx = 2;
+      const totalPtsIdx = totalCols - 1;
+      const rows = j.table.rows.map(r => r.c.map(c => c?.v || ''));
 
-    const prevDriverTotals = [];
-    const currDriverTotals = [];
-    const prevConstructorTotals = {};
-    const currConstructorTotals = {};
-    const driverTeamMap = {};
+      ['#driver-table tbody', '#constructor-table tbody', '#free-slots-table tbody', '#unassigned-table tbody']
+        .forEach(sel => document.querySelector(sel).innerHTML = '');
 
-    // sum all races (including sprints) dynamically
-    function getPrevTotal(r) {
-      return r
-        .slice(firstRaceIdx, totalPtsIdx)
-        .reduce((acc, val) => acc + (parseInt(val) || 0), 0);
-    }
+      const prevDriver = [], currDriver = [], prevCons = {}, currCons = {}, teamCount = {}, freeCount = {}, map = {};
 
-    rows.forEach(r => {
-      const raw = (r[0] || "") + "";
-      const name = raw.replace(/\[\s*\d+\s*\]\s*-\s*/, "").trim();
-      const team = (r[1] || "").trim();
-      const prevPts = getPrevTotal(r);
-      const currPts = parseInt(r[totalPtsIdx]) || 0;
+      const sumRaces = r => r.slice(firstRaceIdx, totalPtsIdx).reduce((a,v)=>a+(parseInt(v)||0),0);
 
-      if (!name) return;
-
-      prevDriverTotals.push({ name, pts: prevPts });
-      currDriverTotals.push({ name, pts: currPts });
-      driverTeamMap[name] = team;
-
-      if (team) {
-        prevConstructorTotals[team] = (prevConstructorTotals[team] || 0) + prevPts;
-        currConstructorTotals[team] = (currConstructorTotals[team] || 0) + currPts;
-      }
-    });
-
-    function rankMap(list) {
-      return list
-        .sort((a, b) => b.pts - a.pts)
-        .map((e, i) => ({ ...e, rank: i + 1 }))
-        .reduce((acc, e) => { acc[e.name] = e.rank; return acc; }, {});
-    }
-
-    const prevRanks = rankMap([...prevDriverTotals]);
-    const currRanks = rankMap([...currDriverTotals]);
-
-    // Driver Standings
-    currDriverTotals
-      .sort((a, b) => b.pts - a.pts)
-      .forEach(entry => {
-        const name = entry.name;
-        const team = driverTeamMap[name];
-        const pts = entry.pts;
-        const pos = currRanks[name];
-        const teamUpper = (team || "").toUpperCase();
-        const diff = (prevRanks[name] || 0) - (currRanks[name]||0);
-        let arrow = "";
-        if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
-        else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
-
-        const tr = document.createElement("tr");
-        tr.className = safeClass(teamUpper);
-        tr.innerHTML = `
-          <td>${pos}</td>
-          <td>${name}</td>
-          <td>
-            <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
-            ${team}
-            <img src="${teamLogos[teamUpper]}" class="logo" alt="${team}"/>
-          </td>
-          <td>${pts} ${arrow}</td>`;
-        dBody.appendChild(tr);
+      rows.forEach(r => {
+        const raw = r[0]||'', name=raw.replace(/\[\d+\]\s*-\s*/,'').trim();
+        const team=r[1]||'';
+        if(!name) return;
+        const p=sumRaces(r), c=parseInt(r[totalPtsIdx])||0;
+        prevDriver.push({name,pts:p}); currDriver.push({name,pts:c}); map[name]=team;
+        if(team){ prevCons[team]=(prevCons[team]||0)+p; currCons[team]=(currCons[team]||0)+c; teamCount[team]=(teamCount[team]||0)+1; freeCount[team]=2-teamCount[team]; }
       });
 
-    // Constructor Standings
-    const prevCRank = rankMap(Object.entries(prevConstructorTotals).map(([name, pts]) => ({ name, pts })));
-    const currCRank = rankMap(Object.entries(currConstructorTotals).map(([name, pts]) => ({ name, pts })));
+      const buildRank=list=>list.sort((a,b)=>b.pts-a.pts).map((e,i)=>({name:e.name,rank:i+1})).reduce((m,e)=> (m[e.name]=e.rank,m),{});
+      const pr=buildRank([...prevDriver]), cr=buildRank([...currDriver]);
 
-    Object.entries(currConstructorTotals)
-      .sort((a, b) => b[1] - a[1])
-      .forEach(([team, pts]) => {
-        const teamUpper = team.toUpperCase();
-        const diff = (prevCRank[team]||0) - (currCRank[team]||0);
-        let arrow = "";
-        if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
-        else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
+      currDriver.sort((a,b)=>b.pts-a.pts).forEach(d=>{
+        const pos=cr[d.name], diff=(pr[d.name]||0)-pos;
+        let arrow=''; if(diff>0) arrow='<img src="up_arrow.webp" class="arrow-icon"/>'; else if(diff<0) arrow='<img src="down_arrow.webp" class="arrow-icon"/>';
+        const T=map[d.name].toUpperCase();
+        document.querySelector('#driver-table tbody').innerHTML+=`<tr class="${safeClass(T)}"><td>${pos}</td><td>${d.name}</td><td><img src="${teamCars[T]}" class="car"/>${map[d.name]}<img src="${teamLogos[T]}" class="logo"/></td><td>${d.pts} ${arrow}</td></tr>`;
+      });
 
-        const tr = document.createElement("tr");
-        tr.className = safeClass(teamUpper);
-        tr.innerHTML = `
-          <td>
-            <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
-            ${team}
-            <img src="${teamLogos[teamUpper]}" class="logo" alt="${team}"/>
-          </>
+      const pcr=buildRank(Object.entries(prevCons).map(([n,pts])=>({name:n,pts}))), ccr=buildRank(Object.entries(currCons).map(([n,pts])=>({name:n,pts}));
+      Object.entries(currCons).sort(([,a],[,b])=>b-a).forEach(([team,pts])=>{
+        const diff=(pcr[team]||0)-(ccr[team]||0);
+        let arrow=''; if(diff>0) arrow='<img src="up_arrow.webp" class="arrow-icon"/>'; else if(diff<0) arrow='<img src="down_arrow.webp" class="arrow-icon"/>';
+        const T=team.toUpperCase();
+        document.querySelector('#constructor-table tbody').innerHTML+=`<tr class="${safeClass(T)}"><td><img src="${teamCars[T]}" class="car"/>${team}<img src="${teamLogos[T]}" class="logo"/></td><td>${pts} ${arrow}</td></tr>`;
+      });
+
+      Object.entries(freeCount).forEach(([team,slots])=>{ if(slots>0){ const T=team.toUpperCase(); document.querySelector('#free-slots-table tbody').innerHTML+=`<tr class="${safeClass(T)}"><td><img src="${teamCars[T]}" class="car"/>${team}<img src="${teamLogos[T]}" class="logo"/></td><td>${slots} free</td></tr>`; }});
+    });
+
+  fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/export?format=csv&range=U16:U16`)
+    .then(r=>r.text()).then(t=>document.getElementById('driver-of-day').textContent=t.trim()||'N/A')
+    .catch(()=>document.getElementById('driver-of-day').textContent='Error');
+</script>
+</body>
+</html>
