--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-<meta http-equiv="refresh" content="55">
+<meta content="width=device-width,initial-scale=1.0" name="viewport"/>
+  <meta http-equiv="refresh" content="55">
 <title>IFWL F1 Leaderboard</title>
 <style>
     body {
@@ -22,7 +23,8 @@
       display:flex; align-items:center; justify-content:center;
       gap:20px; margin-bottom:10px;
     }
-    .header img {height:48px; background:#fff;}
+    .header img {height:48px;; background:#fff;
+}
     .join-series { text-align:center; margin:12px 0; }
     .join-series a {
       background:#1B1443; color:#fff; text-decoration:none;
@@ -52,19 +54,19 @@
     }
 
     /* driver number — no box, big bold italic black */
-    .driver-number {
-      display: inline-block;
-      font-size: 4em;
-      font-weight: bold;
-      font-style: italic;
-      line-height: 1;
-      color: #000;
-      background: none;
-      padding: 0;
-      margin-right: 8px;
-      vertical-align: middle;
-      border-radius: 0;
-    }
+.driver-number {
+  display: inline-block;
+  font-size: 4em;           /* bump up as large as you like */
+  font-weight: bold;
+  font-style: italic;
+  line-height: 1;
+  color: #000;                /* pure black text */
+  background: none;           /* remove the grey box */
+  padding: 0;                 /* no extra space */
+  margin-right: 8px;          /* keep a little gap to the car */
+  vertical-align: middle;
+  border-radius: 0;           /* no rounding */
+}
 
     /* Team Colours */
     .team-ALPINE         { background-color:#0090FF; }
@@ -79,193 +81,195 @@
     .team-WILLIAMS      { background-color:#005AFF; }
     .team-RESERVE       { background-color:#FFFFFF; color:#000; }
   
-    .arrow-icon {
-      height: 64px;
-      width: 64px;
-      margin-left: 6px;
-      vertical-align: middle;
-    }
+.arrow-icon {
+  height: 64px;
+  width: 64px;
+  margin-left: 6px;
+  vertical-align: middle;
+}
 
-    @media (max-width: 768px) {
-      .header {
-        flex-direction: column;
-        gap: 10px;
-      }
+@media (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    gap: 10px;
+  }
 
-      .header img {height: 32px; background:#fff;}
+  .header img {height: 32px;; background:#fff;
+}
 
-      h1 {
-        font-size: 1.5em;
-      }
+  h1 {
+    font-size: 1.5em;
+  }
 
-      .join-series a {
-        display: inline-block;
-        font-size: 0.9em;
-        padding: 8px 16px;
-      }
+  .join-series a {
+    display: inline-block;
+    font-size: 0.9em;
+    padding: 8px 16px;
+  }
 
-      table {
-        display: block;
-        width: 100%;
-        overflow-x: auto;
-        white-space: nowrap;
-        font-size: 0.9em;
-      }
+  table {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+    white-space: nowrap;
+    font-size: 0.9em;
+  }
 
-      th, td {
-        padding: 6px;
-      }
+  th, td {
+    padding: 6px;
+  }
 
-      img.car {
-        height: 32px;
-        margin: 0 4px 0 0;
-      }
+  img.car {
+    height: 32px;
+    margin: 0 4px 0 0;
+  }
 
-      img.logo {
-        height: 24px;
-        margin-left: 6px;
-      }
+  img.logo {
+    height: 24px;
+    margin-left: 6px;
+  }
 
-      .arrow-icon {
-        height: 32px;
-        width: 32px;
-        margin-left: 4px;
-      }
+  .arrow-icon {
+    height: 32px;
+    width: 32px;
+    margin-left: 4px;
+  }
 
-      .driver-number {
-        font-size: 2em;
-      }
+  .driver-number {
+    font-size: 2em;
+  }
 
-      .version {
-        font-size: 0.7em;
-        padding: 1px 4px;
-      }
-    }
-
-
-    .free-team {
-      background: rgba(255, 255, 255, 0.8);
-      color: #000;
-      padding: 10px;
-      margin: 6px 0;
-      border-radius: 6px;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      flex-wrap: wrap;
-    }
-    .free-count {
-      font-weight: bold;
-      margin-left: auto;
-    }
+  .version {
+    font-size: 0.7em;
+    padding: 1px 4px;
+  }
+}
 
 
-    .layout-two-column {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-    }
-    .layout-two-column .half {
-      width: 100%;
-    }
-    @media (min-width: 768px) {
-      .layout-two-column .half {
-        width: 49%;
-      }
-    }
+.free-team {
+  background: rgba(255, 255, 255, 0.8);
+  color: #000;
+  padding: 10px;
+  margin: 6px 0;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+.free-count {
+  font-weight: bold;
+  margin-left: auto;
+}
 
 
-    .driver-of-day {
-      text-align: center;
-      margin: 20px 0;
-      font-size: 1.2em;
-      font-weight: bold;
-      color: #fff;
-    }
+.layout-two-column {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.layout-two-column .half {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .layout-two-column .half {
+    width: 49%;
+  }
+}
+
+
+.driver-of-day {
+  text-align: center;
+  margin: 20px 0;
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #fff;
+}
 
 </style>
 </head>
 <body>
-  <div class="version">Version: Beta 0.0.64 (Sprint race coding added; form fully updated back end)</div>
-  <div class="header">
-    <img alt="IFWL Logo" src="ifwl_logo.png"/>
-    <h1>IFWL F1 Leaderboard</h1>
-    <img alt="IFWL Logo" src="ifwl_logo.png"/>
+<div class="version">Version: Beta 0.0.63 (Added Driver of the Day above Free Slots; Added Position column in Driver Standings)</div>
+<div class="header">
+<img alt="IFWL Logo" src="ifwl_logo.png"/>
+<h1>IFWL F1 Leaderboard</h1>
+<img alt="IFWL Logo" src="ifwl_logo.png"/>
+</div>
+<div class="join-series">
+<a href="https://www.thesimgrid.com/championships/15239" target="_blank">
+      Join our latest series here
+    </a>
+</div>
+<div class="layout-two-column">
+<div class="half">
+
+</div>
+<div class="half">
+
+
+
+
+</div>
+</div>
+
+<h2>Driver of the Day</h2>
+<div id="driver-of-day" class="driver-of-day">
+  <span id="driver-of-day-name">Loading...</span>
+</div>
+
+<h2>Team Slots Free</h2>
+<table id="free-slots-table">
+  <thead><tr><th>TEAM</th><th>SLOTS FREE</th></tr></thead>
+  <tbody></tbody>
+</table>
+
+<div class="layout-two-column">
+  <div class="half">
+    <h2>Driver Standings</h2>
+<table id="driver-table">
+<thead>
+<tr>
+            <th>POS</th>
+            <th>DRIVER</th>
+            <th>TEAM</th>
+            <th>TOTAL POINTS</th>
+          </tr>
+</thead>
+<tbody></tbody>
+</table>
   </div>
-  <div class="join-series">
-    <a href="https://www.thesimgrid.com/championships/15239" target="_blank">Join our latest series here</a>
+  <div class="half">
+    <h2>Constructors Standings</h2>
+<table id="constructor-table">
+<thead>
+<tr><th>TEAM</th><th>TOTAL POINTS</th></tr>
+</thead>
+<tbody></tbody>
+</table>
   </div>
+</div>
 
-  <h2>Driver of the Day</h2>
-  <div id="driver-of-day" class="driver-of-day">Loading...</div>
-
-  <h2>Team Slots Free</h2>
-  <table id="free-slots-table">
-    <thead>
-      <tr><th>TEAM</th><th>SLOTS FREE</th></tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-
-  <div class="layout-two-column">
-    <div class="half">
-      <h2>Driver Standings</h2>
-      <table id="driver-table">
-        <thead>
-          <tr><th>POS</th><th>DRIVER</th><th>TEAM</th><th>TOTAL POINTS</th></tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </div>
-    <div class="half">
-      <h2>Constructors Standings</h2>
-      <table id="constructor-table">
-        <thead>
-          <tr><th>TEAM</th><th>TOTAL POINTS</th></tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </div>
-  </div>
-
-  <h2>Unassigned Drivers</h2>
-  <table id="unassigned-table">
-    <thead>
-      <tr><th>DRIVER</th></tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+<h2>Unassigned Drivers</h2>
+<table id="unassigned-table">
+<thead><tr><th>DRIVER</th></tr></thead>
+<tbody></tbody>
+</table>
 
 <script>
-  const sheetId = '1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog';
-
+  const sheetId = "1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog";
   const teamCars = {
-    "ALPINE":"ALPINE.webp",
-    "ASTON MARTIN":"ASTON.webp",
-    "FERRARI":"FERRARI.webp",
-    "HAAS":"HAAS.webp",
-    "MCLAREN":"MCLAREN.webp",
-    "MERCEDES":"MERCEDES.webp",
-    "RACING BULLS":"RACINGBULLS.webp",
-    "RED BULL RACING":"RBR.webp",
-    "KICK SAUBER":"SAUBER.webp",
-    "RESERVE":"RESERVE.webp",
-    "WILLIAMS":"WILLIAMS.webp"
+    "ALPINE":"ALPINE.webp","ASTON MARTIN":"ASTON.webp","FERRARI":"FERRARI.webp",
+    "HAAS":"HAAS.webp","MCLAREN":"MCLAREN.webp","MERCEDES":"MERCEDES.webp",
+    "RACING BULLS":"RACINGBULLS.webp","RED BULL RACING":"RBR.webp",
+    "KICK SAUBER":"SAUBER.webp","RESERVE":"RESERVE.webp","WILLIAMS":"WILLIAMS.webp"
   };
   const teamLogos = {
-    "ALPINE":"ALPINELOGO.webp",
-    "ASTON MARTIN":"ASTONLOGO.webp",
-    "FERRARI":"FERRARILOGO.webp",
-    "HAAS":"HAASLOGO.webp",
-    "MCLAREN":"MCLARENLOGO.webp",
-    "MERCEDES":"MERCEDESLOGO.webp",
-    "RACING BULLS":"RBRLOGO.webp",
-    "RED BULL RACING":"RBRLOGO.webp",
-    "KICK SAUBER":"KICKLOGO.webp",
-    "RESERVE":"RESERVELOGO.webp",
-    "WILLIAMS":"WILLIAMSLOGO.webp"
+    "ALPINE":"ALPINELOGO.webp","ASTON MARTIN":"ASTONLOGO.webp","FERRARI":"FERRARILOGO.webp",
+    "HAAS":"HAASLOGO.webp","MCLAREN":"MCLARENLOGO.webp","MERCEDES":"MERCEDESLOGO.webp",
+    "RACING BULLS":"RBRLOGO.webp","RED BULL RACING":"RBRLOGO.webp",
+    "KICK SAUBER":"KICKLOGO.webp","RESERVE":"RESERVELOGO.webp","WILLIAMS":"WILLIAMSLOGO.webp"
   };
-  const safeClass = t => 'driver-row team-' + t.replace(/\s+/g,'-');
+  const safeClass = t => "driver-row team-" + t.replace(/\s+/g, "-");
 
   fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts=${Date.now()}`)
     .then(r => r.text())
@@ -274,48 +278,84 @@
       const totalCols = j.table.cols.length;
       const firstRaceIdx = 2;
       const totalPtsIdx = totalCols - 1;
-      const rows = j.table.rows.map(r => r.c.map(c => c?.v || ''));
+      const rows = j.table.rows.map(r => r.c.map(c => c?.v || ""));
 
-      ['#driver-table tbody', '#constructor-table tbody', '#free-slots-table tbody', '#unassigned-table tbody']
-        .forEach(sel => document.querySelector(sel).innerHTML = '');
+      // Clear all tables
+      ["#driver-table tbody","#constructor-table tbody","#free-slots-table tbody","#unassigned-table tbody"]
+        .forEach(sel => document.querySelector(sel).innerHTML = "");
 
       const prevDriver = [], currDriver = [], prevCons = {}, currCons = {}, teamCount = {}, freeCount = {}, map = {};
-
-      const sumRaces = r => r.slice(firstRaceIdx, totalPtsIdx).reduce((a,v)=>a+(parseInt(v)||0),0);
+      const sumRaces = row => row.slice(firstRaceIdx, totalPtsIdx)
+                                  .reduce((a,v) => a + (parseInt(v) || 0), 0);
 
       rows.forEach(r => {
-        const raw = r[0]||'', name=raw.replace(/\[\d+\]\s*-\s*/,'').trim();
-        const team=r[1]||'';
-        if(!name) return;
-        const p=sumRaces(r), c=parseInt(r[totalPtsIdx])||0;
-        prevDriver.push({name,pts:p}); currDriver.push({name,pts:c}); map[name]=team;
-        if(team){ prevCons[team]=(prevCons[team]||0)+p; currCons[team]=(currCons[team]||0)+c; teamCount[team]=(teamCount[team]||0)+1; freeCount[team]=2-teamCount[team]; }
+        const name = (r[0] || "").replace(/\[\d+\]\s*-\s*/, "").trim();
+        const team = (r[1] || "").trim();
+        if (!name) return;
+        const p = sumRaces(r);
+        const c = parseInt(r[totalPtsIdx]) || 0;
+        prevDriver.push({name, pts: p});
+        currDriver.push({name, pts: c});
+        map[name] = team;
+        if (team) {
+          prevCons[team] = (prevCons[team] || 0) + p;
+          currCons[team] = (currCons[team] || 0) + c;
+          teamCount[team] = (teamCount[team] || 0) + 1;
+          freeCount[team] = 2 - teamCount[team];
+        }
       });
 
-      const buildRank=list=>list.sort((a,b)=>b.pts-a.pts).map((e,i)=>({name:e.name,rank:i+1})).reduce((m,e)=> (m[e.name]=e.rank,m),{});
-      const pr=buildRank([...prevDriver]), cr=buildRank([...currDriver]);
+      const buildRank = list => list.sort((a,b) => b.pts - a.pts)
+                                   .map((e,i) => ({name: e.name, rank: i+1}))
+                                   .reduce((m,e) => (m[e.name] = e.rank, m), {});
+      const pr = buildRank([...prevDriver]);
+      const cr = buildRank([...currDriver]);
 
-      currDriver.sort((a,b)=>b.pts-a.pts).forEach(d=>{
-        const pos=cr[d.name], diff=(pr[d.name]||0)-pos;
-        let arrow=''; if(diff>0) arrow='<img src="up_arrow.webp" class="arrow-icon"/>'; else if(diff<0) arrow='<img src="down_arrow.webp" class="arrow-icon"/>';
-        const T=map[d.name].toUpperCase();
-        document.querySelector('#driver-table tbody').innerHTML+=`<tr class="${safeClass(T)}"><td>${pos}</td><td>${d.name}</td><td><img src="${teamCars[T]}" class="car"/>${map[d.name]}<img src="${teamLogos[T]}" class="logo"/></td><td>${d.pts} ${arrow}</td></tr>`;
+      // Render driver standings
+      currDriver.sort((a,b) => b.pts - a.pts).forEach(d => {
+        const pos = cr[d.name];
+        const diff = (pr[d.name] || 0) - pos;
+        let arrow = "";
+        if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
+        else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
+        const TU = map[d.name].toUpperCase();
+        document.querySelector('#driver-table tbody').innerHTML +=
+          `<tr class="${safeClass(TU)}"><td>${pos}</td><td>${d.name}</td>` +
+          `<td><img src="${teamCars[TU]}" class="car"/>${map[d.name]}` +
+          `<img src="${teamLogos[TU]}" class="logo"/></td><td>${d.pts} ${arrow}</td></tr>`;
       });
 
-      const pcr=buildRank(Object.entries(prevCons).map(([n,pts])=>({name:n,pts}))), ccr=buildRank(Object.entries(currCons).map(([n,pts])=>({name:n,pts}));
-      Object.entries(currCons).sort(([,a],[,b])=>b-a).forEach(([team,pts])=>{
-        const diff=(pcr[team]||0)-(ccr[team]||0);
-        let arrow=''; if(diff>0) arrow='<img src="up_arrow.webp" class="arrow-icon"/>'; else if(diff<0) arrow='<img src="down_arrow.webp" class="arrow-icon"/>';
-        const T=team.toUpperCase();
-        document.querySelector('#constructor-table tbody').innerHTML+=`<tr class="${safeClass(T)}"><td><img src="${teamCars[T]}" class="car"/>${team}<img src="${teamLogos[T]}" class="logo"/></td><td>${pts} ${arrow}</td></tr>`;
+      // Render constructors
+      const prevCR = buildRank(Object.entries(prevCons).map(([n,pts]) => ({name:n, pts})));
+      const currCR = buildRank(Object.entries(currCons).map(([n,pts]) => ({name:n, pts})));
+      Object.entries(currCons).sort(([,aPts],[,bPts]) => bPts - aPts).forEach(([team, pts]) => {
+        const diff = (prevCR[team] || 0) - (currCR[team] || 0);
+        let arrow = "";
+        if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
+        else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
+        const TU = team.toUpperCase();
+        document.querySelector('#constructor-table tbody').innerHTML +=
+          `<tr class="${safeClass(TU)}"><td><img src="${teamCars[TU]}" class="car"/>${team}` +
+          `<img src="${teamLogos[TU]}" class="logo"/></td><td>${pts} ${arrow}</td></tr>`;
       });
 
-      Object.entries(freeCount).forEach(([team,slots])=>{ if(slots>0){ const T=team.toUpperCase(); document.querySelector('#free-slots-table tbody').innerHTML+=`<tr class="${safeClass(T)}"><td><img src="${teamCars[T]}" class="car"/>${team}<img src="${teamLogos[T]}" class="logo"/></td><td>${slots} free</td></tr>`; }});
+      // Render free slots
+      Object.entries(freeCount).forEach(([team, slots]) => {
+        if (slots > 0) {
+          const TU = team.toUpperCase();
+          document.querySelector('#free-slots-table tbody').innerHTML +=
+            `<tr class="${safeClass(TU)}"><td><img src="${teamCars[TU]}" class="car"/>${team}` +
+            `<img src="${teamLogos[TU]}" class="logo"/></td><td>${slots} free</td></tr>`;
+        }
+      });
     });
 
+  // Driver of the Day
   fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/export?format=csv&range=U16:U16`)
-    .then(r=>r.text()).then(t=>document.getElementById('driver-of-day').textContent=t.trim()||'N/A')
-    .catch(()=>document.getElementById('driver-of-day').textContent='Error');
+    .then(r => r.text())
+    .then(txt => document.getElementById('driver-of-day-name').textContent = txt.trim() || "N/A")
+    .catch(() => document.getElementById('driver-of-day-name').textContent = "Error");
 </script>
+
 </body>
 </html>
