--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -927,6 +927,45 @@
               <input type="text" id="stewardTag-${ticketId}" 
                      placeholder="e.g. Steward – IOC" 
                      value="${ticketData.stewardTag || ""}" />
+    <!-- ─── Stewards Post-Race Coding Dropdown ─── -->
+    <label for="postRaceCode-${ticketId}"><strong>Post-Race Code</strong></label>
+    <select id="postRaceCode-${ticketId}">
+      <option value="" disabled selected>— Select a code —</option>
+      <option value="RP1mi">RP1mi – Unsafe Track Rejoin (10s)</option>
+      <option value="RP1St">RP1St – Unsafe Track Rejoin (30s)</option>
+      <option value="RP1Se">RP1Se – Unsafe Track Rejoin (SG30)</option>
+      <option value="RP2mi">RP2mi – Unsafe Pit Exit / Crossing pit line (10s)</option>
+      <option value="RP2St">RP2St – Unsafe Pit Exit / Crossing pit line (30s)</option>
+      <option value="RP2Se">RP2Se – Unsafe Pit Exit / Crossing pit line (SG30)</option>
+      <option value="RP3mi">RP3mi – Blue Flag Abuse / Blocking While Lapped (5s)</option>
+      <option value="RP3St">RP3St – Blue Flag Abuse / Blocking While Lapped (15s)</option>
+      <option value="RP3Se">RP3Se – Blue Flag Abuse / Blocking While Lapped (SG30)</option>
+      <option value="RP4mi">RP4mi – Formation Lap / Start Line Infingement (30s)</option>
+      <option value="RP4St">RP4St – Formation Lap / Start Line Infingement (SG30)</option>
+      <option value="RP4Se">RP4Se – Formation Lap / Start Line Infingement (DQ)</option>
+      <option value="RP5mi">RP5mi – Illegal Overtake (Off-Track or Gained Advantage) (5s)</option>
+      <option value="RP5St">RP5St – Illegal Overtake (Off-Track or Gained Advantage) (15s)</option>
+      <option value="RP5Se">RP5Se – Illegal Overtake (Off-Track or Gained Advantage) (30s)</option>
+      <option value="RP6mi">RP6mi – Late Blocking / Moving Under Braking (5s)</option>
+      <option value="RP6St">RP6St – Late Blocking / Moving Under Braking (30s)</option>
+      <option value="RP6Se">RP6Se – Late Blocking / Moving Under Braking (SG30)</option>
+      <option value="RP7mi">RP7mi – Divebomb / Overly Ambitious Lunge (10s)</option>
+      <option value="RP7St">RP7St – Divebomb / Overly Ambitious Lunge (30s)</option>
+      <option value="RP7Se">RP7Se – Divebomb / Overly Ambitious Lunge (SG30)</option>
+      <option value="RP8Mi">RP8Mi – Rear-End Collision (Braking Zone) (5s)</option>
+      <option value="RP8St">RP8St – Rear-End Collision (Braking Zone) (15s)</option>
+      <option value="RP8Se">RP8Se – Rear-End Collision (Braking Zone) (SG30)</option>
+      <option value="RP9Mi">RP9Mi – Squeezing Off Track / Not Leaving Room (5s)</option>
+      <option value="RP9St">RP9St – Squeezing Off Track / Not Leaving Room (15s)</option>
+      <option value="RP9Se">RP9Se – Squeezing Off Track / Not Leaving Room (SG30)</option>
+      <option value="RP10Mi">RP10Mi – Excessive flashing (10s)</option>
+      <option value="RP10St">RP10St – Excessive flashing (10s)</option>
+      <option value="RP10Se">RP10Se – Excessive flashing (10s)</option>
+      <option value="RP11Mi">RP11Mi – Intentional Ramming (DQ)</option>
+      <option value="RP11St">RP11St – Intentional Ramming (DQ)</option>
+      <option value="RP11Se">RP11Se – Intentional Ramming (DQ)</option>
+    </select>
+
 <label for="futureAdvice-${ticketId}"><strong>Future Advice</strong></label>
 <select id="futureAdvice-${ticketId}">
   <option value="" disabled ${!ticketData.futureAdvice ? "selected" : ""}>Select advice…</option>
@@ -977,6 +1016,7 @@
 
         const futureAdviceSel = document.getElementById(`futureAdvice-${ticketId}`);
         const futureAdviceVal = futureAdviceSel.value;
+    const postRaceCodeVal = document.getElementById(`postRaceCode-${ticketId}`).value;
 if (!decisionText) {
           detailStatusDiv.textContent = "Please enter a steward decision.";
           detailStatusDiv.className = "status error";
