--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -902,6 +902,9 @@
             ${ticketData.stewardDecision 
               ? `<p><strong>Steward Decision:</strong> ${ticketData.stewardDecision}</p>` 
               : ""}
+            ${ticketData.postRaceCode
+              ? `<p><strong>Post-Race Code:</strong> ${ticketData.postRaceCode}</p>`
+              : ""}
             <p><strong>Submitted At:</strong> ${
               (ticketData.timestamp && ticketData.timestamp.toDate)
                 ? ticketData.timestamp.toDate().toLocaleString()
@@ -1448,6 +1451,14 @@ if (!decisionText) {
       const reasonLines = doc.splitTextToSize(ticketData.fullIncident || "—", 150);
       doc.text(reasonLines, 45, y);
       y += reasonLines.length * 6 + 8;
+  
+  // Post-Race Code
+  doc.setFont("helvetica", "bold");
+  doc.text("Post-Race Code:", 15, y);
+  doc.setFont("helvetica", "normal");
+  doc.text(ticketData.postRaceCode || "—", 60, y);
+  y += 8;
+  
 
       
         // Future Advice: Steward’s recommended feedback
