--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -1001,6 +1001,11 @@
         </td>
       `;
       ticketRow.insertAdjacentElement("afterend", detailRow);
+      // set Post-Race Code dropdown to saved value
+      const prcSelect = document.getElementById(`postRaceCode-${ticketId}`);
+      if (prcSelect && ticketData.postRaceCode) {
+        prcSelect.value = ticketData.postRaceCode;
+      }
 
       document.getElementById(`cancelDetail-${ticketId}`).addEventListener("click", () => {
         detailRow.remove();
@@ -1038,10 +1043,11 @@ if (!decisionText) {
           const ticketRef = doc(db, "tickets", ticketId);
           await updateDoc(ticketRef, {
             status: newStatus,
-            stewardDecision: decisionText,
-            stewardTag: stewardTagVal,
-            futureAdvice: futureAdviceVal
-          });
+                        stewardDecision: decisionText,
+                        stewardTag: stewardTagVal,
+                        futureAdvice: futureAdviceVal
+            ,postRaceCode: postRaceCodeVal
+        });
           detailStatusDiv.textContent = "Ticket updated!";
           detailStatusDiv.className = "status success";
           setTimeout(async () => {
