--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -1046,7 +1046,8 @@ if (!decisionText) {
                         stewardDecision: decisionText,
                         stewardTag: stewardTagVal,
                         futureAdvice: futureAdviceVal
-            ,postRaceCode: postRaceCodeVal
+            ,
+            postRaceCode: postRaceCodeVal,postRaceCode: postRaceCodeVal
         });
           detailStatusDiv.textContent = "Ticket updated!";
           detailStatusDiv.className = "status success";
