--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -1025,6 +1025,7 @@
 
         const futureAdviceSel = document.getElementById(`futureAdvice-${ticketId}`);
         const futureAdviceVal = futureAdviceSel.value;
+        const postRaceCodeVal = document.getElementById(`postRaceCode-${ticketId}`).value;
 if (!decisionText) {
           detailStatusDiv.textContent = "Please enter a steward decision.";
           detailStatusDiv.className = "status error";
@@ -1042,13 +1043,18 @@ if (!decisionText) {
         try {
           const ticketRef = doc(db, "tickets", ticketId);
           await updateDoc(ticketRef, {
-            status: newStatus,
-                        stewardDecision: decisionText,
-                        stewardTag: stewardTagVal,
-                        futureAdvice: futureAdviceVal
-            ,
-            postRaceCode: postRaceCodeVal,postRaceCode: postRaceCodeVal
-        });
+
+              status: newStatus,
+
+              stewardDecision: decisionText,
+
+              stewardTag: stewardTagVal,
+
+              futureAdvice: futureAdviceVal,
+
+              postRaceCode: postRaceCodeVal
+
+          });
           detailStatusDiv.textContent = "Ticket updated!";
           detailStatusDiv.className = "status success";
           setTimeout(async () => {
