--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -1310,7 +1310,45 @@ if (!decisionText) {
     // 13) GENERATE DISCORD FORM (PDF) for a given ticket
     //     Emulates an IFWL.NET Stewards’ decision format
     // ----------------------------------------------------------------
-    async function generateDiscordForm(ticketId, ticketData) {
+    async 
+  // Lookup for Post-Race Code descriptions
+  const postRaceCodeLookup = {
+    RP1mi: "Unsafe Track Rejoin (10s)",
+    RP1St: "Unsafe Track Rejoin (30s)",
+    RP1Se: "Unsafe Track Rejoin (SG30)",
+    RP2mi: "Unsafe Pit Exit / Crossing pit line (10s)",
+    RP2St: "Unsafe Pit Exit / Crossing pit line (30s)",
+    RP2Se: "Unsafe Pit Exit / Crossing pit line (SG30)",
+    RP3mi: "Blue Flag Abuse / Blocking While Lapped (5s)",
+    RP3St: "Blue Flag Abuse / Blocking While Lapped (15s)",
+    RP3Se: "Blue Flag Abuse / Blocking While Lapped (SG30)",
+    RP4mi: "Formation Lap / Start Line Infingement (30s)",
+    RP4St: "Formation Lap / Start Line Infingement (SG30)",
+    RP4Se: "Formation Lap / Start Line Infingement (DQ)",
+    RP5mi: "Illegal Overtake (Off-Track or Gained Advantage) (5s)",
+    RP5St: "Illegal Overtake (Off-Track or Gained Advantage) (15s)",
+    RP5Se: "Illegal Overtake (Off-Track or Gained Advantage) (30s)",
+    RP6mi: "Late Blocking / Moving Under Braking (5s)",
+    RP6St: "Late Blocking / Moving Under Braking (30s)",
+    RP6Se: "Late Blocking / Moving Under Braking (SG30)",
+    RP7mi: "Divebomb / Overly Ambitious Lunge (10s)",
+    RP7St: "Divebomb / Overly Ambitious Lunge (30s)",
+    RP7Se: "Divebomb / Overly Ambitious Lunge (SG30)",
+    RP8Mi: "Rear-End Collision (Braking Zone) (5s)",
+    RP8St: "Rear-End Collision (Braking Zone) (15s)",
+    RP8Se: "Rear-End Collision (Braking Zone) (SG30)",
+    RP9Mi: "Squeezing Off Track / Not Leaving Room (5s)",
+    RP9St: "Squeezing Off Track / Not Leaving Room (15s)",
+    RP9Se: "Squeezing Off Track / Not Leaving Room (SG30)",
+    RP10Mi: "Excessive flashing (10s)",
+    RP10St: "Excessive flashing (10s)",
+    RP10Se: "Excessive flashing (10s)",
+    RP11Mi: "Intentional Ramming (DQ)",
+    RP11St: "Intentional Ramming (DQ)",
+    RP11Se: "Intentional Ramming (DQ)"
+  };
+
+  function generateDiscordForm(ticketId, ticketData) {
       const { jsPDF } = window.jspdf;
       const doc = new jsPDF({
         unit: "mm",
@@ -1469,7 +1507,10 @@ if (!decisionText) {
   doc.setFont("helvetica", "bold");
   doc.text("Post-Race Code:", 15, y);
   doc.setFont("helvetica", "normal");
-  doc.text(ticketData.postRaceCode || "—", 60, y);
+  // use lookup for description
+  const prc = ticketData.postRaceCode || "";
+  const prcDesc = prc && postRaceCodeLookup[prc] ? `${prc} – ${postRaceCodeLookup[prc]}` : "—";
+  doc.text(prcDesc, 60, y);
   y += 8;
   
 
