--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -1348,7 +1348,7 @@ if (!decisionText) {
     RP11Se: "Intentional Ramming (DQ)"
   };
 
-  function generateDiscordForm(ticketId, ticketData) {
+  async function generateDiscordForm(ticketId, ticketData) {
       const { jsPDF } = window.jspdf;
       const doc = new jsPDF({
         unit: "mm",
